syntax = "proto3";

package atomos;
option go_package = "github.com/hwangtou/go-atomos";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

enum IDType {
  InvalidIDType = 0;
  Process = 1;
  Main = 2;
  Cosmos = 3;
  Element = 4;
  Atomos = 5;
}

message IDInfo {
  IDType type = 1;
  string cosmos = 2;
  string element = 3;
  string atomos = 4;
  google.protobuf.Any ext = 5;
}

//message AtomID {
//  string node = 1;
//  string element = 2;
//  string name = 3;
//}

enum LogLevel {
  Debug = 0;
  Info = 1;
  Warn = 2;
  Error = 3;
  Fatal = 4;
}

message LogMail {
  IDInfo id = 1;
  google.protobuf.Timestamp time = 2;
  LogLevel level = 3;
  string message = 4;
}

message ErrorInfo {
  int64 code = 1;
  string message = 2;
  string panic = 3;
  repeated ErrorCallerInfo stacks = 4;
}

message ErrorCallerInfo {
  IDInfo id = 1;
  string reason = 2;
  string file = 3;
  uint32 line = 4;
  bytes args = 5;
  string args_read = 6;
}

message Nil {
}

message Int32 {
  int32 n = 1;
}

message Int64 {
  int64 n = 1;
}

message UInt32 {
  uint32 n = 1;
}

message UInt64 {
  uint64 i = 1;
}

message String {
  string s = 1;
}

// Configuration

message Config {
  string node = 1;
  string log_path = 2;
  LogLevel log_level = 3;
  CertConfig enable_cert = 4;
  RemoteServerConfig enable_server = 5;
  TelnetServerConfig enable_telnet = 6;
  map<string, string> customize = 7;
}

message ElementConfig {
  string name = 1;
  uint64 version = 2;
  LogLevel log_level = 3;
  int32 atom_init_num = 4;
  map<string, AtomMessageConfig> messages = 5;
}

message AtomMessageConfig {
  google.protobuf.Any in = 1;
  google.protobuf.Any out = 2;
}

message RemoteServerConfig {
  string host = 1;
  int32 port = 2;
}

message TelnetServerConfig {
  string network = 1;
  string address = 2;
  TelnetAdminConfig admin = 3;
}

message TelnetAdminConfig {
  string username = 1;
  string password = 2;
}

message CertConfig {
  string cert_path = 1;
  string key_path = 2;
  bool insecure_skip_verify = 3;
}

// Cosmos Info

message CosmosRemoteConnectInfo {
  CosmosRemoteInfo config = 1;
}

message CosmosRemoteInfo {
  IDInfo id = 1;
  map<string, ElementRemoteInfo> elements = 2;
  int64 changed = 3;
}

message ElementRemoteInfo {
  IDInfo id = 1;
}

message AtomRemoteInfo {
  IDInfo id = 1;
}

// Cosmos Requester

//message CosmosRemoteGetAtomIDReq {
//  string element = 1;
//  string name = 2;
//}

message CosmosRemoteGetAtomIDRsp {
  AtomRemoteInfo info = 1;
  ErrorInfo error = 2;
}

message CosmosRemoteMessagingReq {
  IDInfo from = 1;
  string from_addr = 2;
  IDInfo to = 3;
  repeated IDInfo call_chain = 4;
  string message = 5;
  google.protobuf.Any args = 6;
}

message CosmosRemoteMessagingRsp {
  google.protobuf.Any reply = 1;
  ErrorInfo error = 2;
}

message CosmosRemoteScalingReq {
  IDInfo from = 1;
  string from_addr = 2;
  IDInfo to = 3;
  string message = 4;
  google.protobuf.Any args = 5;
}

message CosmosRemoteScalingRsp {
  IDInfo id = 1;
  ErrorInfo error = 2;
}
